--- a/ex_01_python_quick_tutorial.ipynb
+++ b/ex_01_python_quick_tutorial.ipynb
@@ -29,12 +29,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python course is tough\n"
+      "python course here you are\n"
      ]
     }
    ],
    "source": [
-    "print('python course is tough')"
+    "print('python course here you are')"
    ]
   },
   {
@@ -100,6 +100,16 @@
    "source": [
     "func=9*x+9\n",
     "x=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f2437cb-636d-4a5c-85b9-578e452692a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "**需要先给出X值"
    ]
   },
   {
@@ -368,30 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "d456d029-682c-4103-a71a-16f410a593c5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['\\n', '\\x0b', '\\x0c', '\\r', '\\x0e', 166, '\\x10', '\\x11', '\\x12', '\\x13']\n",
-      "__________________________________________________\n",
-      "lst_s[5]==166->['\\n', '\\x0b', '\\x0c', '\\r', '\\x0e', 166, '\\x10', '\\x11', '\\x12', '\\x13']\n",
-      "lst_s+[None]*6->['\\n', '\\x0b', '\\x0c', '\\r', '\\x0e', 166, '\\x10', '\\x11', '\\x12', '\\x13', None, None, None, None, None, None]\n",
-      "lst_none[13]=2015->['\\n', '\\x0b', '\\x0c', '\\r', '\\x0e', 166, '\\x10', '\\x11', '\\x12', '\\x13', None, None, None, 2015, None, None]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'map' object is not callable",
+     "ename": "NameError",
+     "evalue": "name 'lst_s' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-80-6c2c1fb0bb50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lst_none[13]=2015->{}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_none\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mlst_none\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m13\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m104\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lst_none[-6:-4]=list(range(100,104,2))->{}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_none\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mlst_none\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'map' object is not callable"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-6c2c1fb0bb50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_s\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_\"\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlst_s\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m166\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lst_s[5]==166->{}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_s\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlst_none\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlst_s\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'lst_s' is not defined"
      ]
     }
    ],
@@ -415,19 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "f2f912ab-047c-4fa5-a6a4-0a438079527b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'map' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-83-6b64c011fbe5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlst_s_2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m95\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_s_2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'map' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_', '`', 'a', 'b', 'c']\n"
      ]
     }
    ],
@@ -956,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "id": "b1784edb-c1b3-46b3-8c65-b754c175d190",
    "metadata": {},
    "outputs": [
@@ -964,12 +959,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.3.6 3.3.7 3.3.8\n"
+      "3.3.6 3.3.7 3.3.8\n",
+      "re.findall(pattern_1,text)->['Python']\n",
+      "re.findall(pattern_2,text)->[]\n"
      ]
     }
    ],
    "source": [
-    "print(\"3.3.6\",\"3.3.7\",\"3.3.8\")"
+    "print(\"3.3.6\",\"3.3.7\",\"3.3.8\")\n",
+    "import re\n",
+    "pattern_1='Python'\n",
+    "text=\"Hello Python!\"\n",
+    "print(\"re.findall(pattern_1,text)->{}\".format(re.findall(pattern_1,text)))\n",
+    "pattern_2='python'\n",
+    "print(\"re.findall(pattern_2,text)->{}\".format(re.findall(pattern_2,text)))\n"
    ]
   },
   {
@@ -1050,6 +1053,28 @@
     "mylist = [\"apple\", \"banana\", \"cherry\"]\n",
     "x = len(mylist)\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fb5214a7-3ead-41cb-8b70-d5914d1ff224",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function len in module builtins:\n",
+      "\n",
+      "len(obj, /)\n",
+      "    Return the number of items in a container.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(len)"
    ]
   },
   {
@@ -1368,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "id": "7a1c3e75-6286-4599-9624-3b0f9676b12d",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a<c<b kidding!!!\n"
+      "a<c<b kidding\n"
      ]
     }
    ],
@@ -1384,7 +1409,7 @@
     "a,b,c=0,10,15\n",
     "if c>a and c<b:\n",
     "    print('a<c<b')\n",
-    "else: print('a<c<b kidding!!!')\n"
+    "else: print('a<c<b kidding')\n"
    ]
   },
   {
@@ -1414,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "id": "f87c5f8f-ad90-4599-b892-85872861df55",
    "metadata": {},
    "outputs": [
@@ -1422,22 +1447,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5040\n"
+      "2432902008176640000\n"
      ]
     }
    ],
    "source": [
+    "#3.5.2递归 多次调用自身，减少运算量\n",
     "def factorial(n):\n",
     "    if n==1:\n",
-    "        return 1\n",
+    "        return 1#不然0*1=0了\n",
     "    else:\n",
     "        return n*factorial(n-1)\n",
-    "print(factorial(7))\n"
+    "print(factorial(20))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "id": "42baefce-e609-421a-b96c-e966e8f8a5ee",
    "metadata": {},
    "outputs": [
@@ -1445,17 +1471,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "类\n"
+      "类很重要\n"
      ]
     }
    ],
    "source": [
-    "print(\"类\")"
+    "print(\"类很重要\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "id": "807a48de-daf3-4260-8bca-02394e00c547",
    "metadata": {},
    "outputs": [
@@ -1463,17 +1489,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.6.2 3.6.3 3.7\n"
+      "3.6.2 3.6.3 3.7\n",
+      "fa=[1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+      "fb=[55, 89, 144, 233, 377]\n"
      ]
     }
    ],
    "source": [
-    "print(\"3.6.2\",\"3.6.3\",\"3.7\")"
+    "print(\"3.6.2\",\"3.6.3\",\"3.7\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 13,
+   "id": "921d9bde-ac11-45e6-8cfb-51846f35d251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#迭代器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "8e46b22c-8d05-4cfa-8c20-55e04555024e",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1542,8 @@
     "print(\"fa={}\".format(fa))\n",
     "for i in range(5):\n",
     "    fb.append(f.next())\n",
-    "print(\"fb={}\".format(fb))\n"
+    "print(\"fb={}\".format(fb))\n",
+    "#读完值，从最后面的值开始"
    ]
   },
   {
